k8s-config/api-gateway-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    component: api-gateway
spec: 
  revisionHistoryLimit: 1
  selector:
    matchLabel: 
      component: api-gateway
  template:
    metadata:
      labels:
        component: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 14802000/api-gateway
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
