k8s-config/books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-service
  labels:
    component: books-service
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      component: categories-service
  template:
    metadata:
      labels:
        component: categories-service
    spec:
      containers:
        - name: categories-service
          image: 080196/microservice
