k8s-config/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels: 
    component: mongodb
spec:
  selector:
    component: mongodb
  ports:
    - port: 27017
