k8s-config/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - path: /book
        pathType: Prefix
        backend:
          service: 
            name: books
            port:
              number: 3000
      - path: /order
        pathType: Prefix
        backend:
          service: 
            name: orders
            port:
              number: 5000
      - path: /customer
        pathType: Prefix
        backend:
          service: 
            name: customers
            port:
              number: 4000
